# agentcontext

./: .gitignore  BENCHMARKS.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: harness.py
examples/: rag_with_citations.py
src/agentcontext/: __init__.py  cli.py
src/agentcontext/chunking/: __init__.py  base.py
src/agentcontext/context/: __init__.py  builder.py
src/agentcontext/core/: model.py  registry.py
src/agentcontext/embeddings/: __init__.py  base.py
src/agentcontext/parsers/: __init__.py  base.py  docx.py  html.py  pdf.py  text.py
src/agentcontext/retrieval/: __init__.py  base.py
tests/: test_pipeline.py
